@@ -11,11 +11,9 @@
 package example;
 
 import static java.util.Collections.singletonList;
-import static java.util.Collections.unmodifiableList;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -36,7 +34,7 @@ class ClassTemplateDemo {
 
 	static final List<String> WELL_KNOWN_FRUITS
 	// tag::custom_line_break[]
-		= unmodifiableList(Arrays.asList("apple", "banana", "lemon"));
+		= List.of("apple", "banana", "lemon");
 
 	//end::user_guide[]
 	@Nullable
