@@ -13,7 +13,6 @@ package org.junit.platform.engine.support.store;
 import static org.apiguardian.api.API.Status.EXPERIMENTAL;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -48,7 +47,7 @@ public class Namespace {
 	public static Namespace create(Object... parts) {
 		Preconditions.notEmpty(parts, "parts array must not be null or empty");
 		Preconditions.containsNoNullElements(parts, "individual parts must not be null");
-		return new Namespace(Arrays.asList(parts));
+		return new Namespace(List.of(parts));
 	}
 
 	/**
@@ -68,7 +67,7 @@ public class Namespace {
 	private final List<Object> parts;
 
 	private Namespace(List<Object> parts) {
-		this.parts = new ArrayList<>(parts);
+		this.parts = List.copyOf(parts);
 	}
 
 	@Override
